--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodeGeeks</title>
   </head>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-L85VQ0X53F"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-L85VQ0X53F');
-</script>
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZQVQW2LE3S"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-ZQVQW2LE3S');
+  </script>
   <body  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
